--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
            </div>
            <div class="header-contact">
-            <p><a href="malito:rukunuzzaman.razu@gmail.com">Email: Rukunuzzaman Razu</a></p>
-            <p><a href="tel:+88801744298814">Phone: +88801744298814</a></p>
+            <p><a href="https://mail.google.com/mail/u/0/#inbox">Email: rukunuzzaman.razu@gmail.com</a></p>
+            <p><a href="tel:+8801744298814">Phone: +8801744298814</a></p>
 
 
            </div>
@@ -37,8 +37,10 @@
         <hr>
         
         <main>
+            <!--personal sectino stert-->
+            <section class="personal ">
 
-
+            </section>
 
 
 
