--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
            <img class="profile-image" src="img/razu.jpeg" alt="#">
            <div class="header-bio">
             <h1>Razu Ahmed</h1>
-            <h3>Web designer</h3>
+            
 
            </div>
            <div class="header-contact">
@@ -31,16 +31,30 @@
 
         </header>
 
-
+        <!--clearing div-->
         <div class="div-clear"></div>
 
         <hr>
         
         <main>
-            <!--personal sectino stert-->
-            <section class="personal ">
+            <!--personal-sectino stert-->
+            <section id="personal-sectino ">
+                <div class="content">
+                    <div class="left-div">
+                        <h1>Personal Irformation</h1>
+
+                    </div>
+                    <div class="right-div">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni deleniti, consequatur itaque eligendi unde commodi ipsa! Odit impedit fugit earum qui iste dignissimos a, iure adipisci consectetur corporis, reprehenderit rem quaerat minus debitis ad laudantium ipsam error. Numquam a natus architecto in cumque, tempore praesentium repudiandae repellendus temporibus aliquam inci. Voluptate voluptatem ipsa facere tempora a unde dignissimos minus doloremque animi! Natus dolor doloribus placeat corrupti at eos vero? Maiores ut consectetur dignissimos suscipit v quisquam ad doloribus 
+                    </div>
+
+                </div>
 
             </section>
+             <!--personal-sectino stert-->
+             <!--clearing div-->
+             <div class="div-clear"></div>
+             <hr class="common-hr">
 
 
 
