--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
             <div class="com">
                 <a href="https://www.facebook.com/">Facebook</a>
                 <a href="https://www.youtube.com/">youtube</a>
-                <a href="https://wa.me/qr/TFUZ3N2Z2LH3A1/">whatsapp</a>
+                <a href="https://wa.me/qr/TFUZ3N2Z2LH3A1">whatsapp</a>
+               
             </div>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
 
@@ -143,5 +144,6 @@
 
 
     </div>
+    <script src="JavaScript.js"></script>
 </body>
 </html>
