--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="content">
+    <div class="container">
         <header>
            <img class="profile-image" src="img/razu.jpeg" alt="#">
            <div class="header-bio">
             <h1>Razu Ahmed</h1>
+            <h5>Junior web developer</h5>
             
 
            </div>
